2012-04-30 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-01-XX:
	- Added build rules for running genClassesH script of classes_def.xml
	exists but classes.h does not.

2012-04-26 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-01-00:
	- Convert any LD_LIBRARY_PATH to DYLD_FALLBACK_LIBRARY_PATH on osx
	archs. This allows us to have osx* and slc* archs in single dev area,
	although it is unlikely that someone will do this but at least there
	is no restriction from SCRAM side now
	- Allow external scripts (hooks) to be called at Package/Product
	start/end time. One needs to have HOOK_PACKAGE/PRODUCT flag set in
	config/BuildFile.xml. SCRAM will call
	'$(HOOK_PACKAGE) -e|-s -p <Package|ProductName>' if HOOK_PACKAGE|PRODUCT
	is set.
	- Unit test dependency added e.g. 
	<bin file="Test2"><flags PRE_TEST="Test1"/></bin>
	will run Test1 first
	- For fortran file compilation/linking, automatically add f77_compiler
	dependency
	- Drop CMSSW LIBDIR which does not exist e.g. in dev area
	external/<arch>/lib does not exists (unless tool changed). This will
	avoid following kind of warnings on osx archs
	ld: warning: directory not found for option '-L<path>/external/<arch>/lib'
	- config/SCRAM/Plugins are now moved back to SCRAM itself.