@@ -1275,25 +1275,25 @@ $(3)/$(2).rootmap: $($(1)_objdir)/$(2).rootmap
 all_$(1) += $(3)/$(2).rootmap
 endef
 
-#safename,rootmap,headers,hfiles,defxmlfiles,prodstore,genreflexargs,Cababilities
+#safename,rootmap,hfiles,defxmlfiles,prodstore,genreflexargs,Cababilities
 define LCGDict
-$(1)$(8)_GENREFLEX_ARGS := $(7)
-$(eval $(call AddLCGDictRule,$(1),$(4),$(5),$(1)$(8),a/))
+$(1)$(7)_GENREFLEX_ARGS := $(6)
+$(eval $(call AddLCGDictRule,$(1),$(3),$(4),$(1)$(7),a/))
 ifeq ($(strip $(2)),1)
-$$(eval $$(call LcgDictRootMap,$1,$(1)$(8),$6))
+$$(eval $$(call LcgDictRootMap,$1,$(1)$(7),$5))
 endif
-ifneq ($(strip $8),)
-$(1)$(8)_CDICT_LDFLAGS   = $$($(1)_LDFLAGS) -l$(1)
-all_$(1)       += $($(1)_objdir)/$(MODULE_PREFIX)$(1)$(8).$(SHAREDSUFFIX)
+ifneq ($(strip $7),)
+$(1)$(7)_CDICT_LDFLAGS   = $$($(1)_LDFLAGS) -l$(1)
+all_$(1)       += $($(1)_objdir)/$(MODULE_PREFIX)$(1)$(7).$(SHAREDSUFFIX)
 ALL_CLASS_VERSION_RULES += $($(1)_objdir)/updateclassversion
 ifneq ($(strip $(UPDATE_CLASSVERSION)),)
 all_$(1)       += $($(1)_objdir)/updateclassversion
-$($(1)_objdir)/updateclassversion: $($(1)_objdir)/$(MODULE_PREFIX)$(1)$(8).$(SHAREDSUFFIX)
+$($(1)_objdir)/updateclassversion: $($(1)_objdir)/$(MODULE_PREFIX)$(1)$(7).$(SHAREDSUFFIX)
 	@$(CMD_touch) $$@
 endif
-$($(1)_objdir)/$(MODULE_PREFIX)$(1)$(8).$(SHAREDSUFFIX): $$($(1)$(8)_ids) $(WORKINGDIR)/cache/prod/lib$(1)
-	$$(call link_lib_capabilities,$(1),$(1),$(6),$(1)$(8),$$($(1)$(8)_ids),$(5))
-$$(eval $$(call BigObject,$(1),$(1)$(8),$$($(1)$(8)_ids)))
+$($(1)_objdir)/$(MODULE_PREFIX)$(1)$(7).$(SHAREDSUFFIX): $$($(1)$(7)_ids) $(WORKINGDIR)/cache/prod/lib$(1)
+	$$(call link_lib_capabilities,$(1),$(1),$(5),$(1)$(7),$$($(1)$(7)_ids),$(4))
+$$(eval $$(call BigObject,$(1),$(1)$(7),$$($(1)$(7)_ids)))
 endif
 endef
 
