@@ -1,8 +1,10 @@
 2012-04-30 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
 
-	* V04-01-XX:
+	* V04-01-02: Auto generation of classes.h files
 	- Added build rules for running genClassesH script of classes_def.xml
 	exists but classes.h does not.
+	- cleanup unused variables for LCGDict.
+	- Enable autoGenerateClassesH for CMSSW
 
 2012-04-26 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
 
